Update .gitattributes to ignore dictionaries
As the language details of the application are all wrong I am making the repository ignore the dictionary files they are most likely falsify the result because of italian words in them

--- a/.gitattributes
+++ b/.gitattributes
@@ -61,3 +61,10 @@
 #*.PDF   diff=astextplain
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
+
+###############################################################################
+# Custom override to ignore dictionary files
+###############################################################################
+
+$ cat .gitattributes
+PassaFraseCore/Dizionario/* linguist-vendored
