"linguist-vendored" modified to "linguist-documentation"
"linguist-vendored" modified to "linguist-documentation"

--- a/.gitattributes
+++ b/.gitattributes
@@ -67,4 +67,4 @@
 ###############################################################################
 
 $ cat .gitattributes
-PassaFraseCore/Dizionario/* linguist-vendored
+PassaFraseCore/Dizionario/* linguist-documentation
