--- a/PassaFraseWin/PassaFraseWin.vbproj
+++ b/PassaFraseWin/PassaFraseWin.vbproj
@@ -47,7 +47,8 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>PassaFrase.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -125,9 +126,6 @@
       <Project>{fcf3137f-1ef7-4b72-9b2f-c8d17ce01082}</Project>
       <Name>PassaFraseCore</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="PassaFrase.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
