Prima versione funzionante rilasciata, ultimi ritocchi alla versione web, pubblicato il sito www.passafrase.it

--- a/PassaFrase/PassaFraseWeb.vbproj
+++ b/PassaFrase/PassaFraseWeb.vbproj
@@ -25,6 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,6 +35,7 @@
     <OutputPath>bin\</OutputPath>
     <DocumentationFile>PassaFrase.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -43,6 +45,7 @@
     <OutputPath>bin\</OutputPath>
     <DocumentationFile>PassaFrase.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -51,20 +54,19 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PassaFraseCore\PassaFraseCore.vbproj">
@@ -135,11 +137,22 @@
     <Content Include="graphics\socialmedia\github.png" />
     <Content Include="graphics\socialmedia\githubblack.svg" />
     <Content Include="humans.txt" />
+    <Content Include="pages\dizionari.aspx" />
+    <Content Include="pages\presentazione.aspx" />
     <Content Include="pages\tecnica.aspx" />
     <Content Include="templates\basic.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
+    <None Include="Web.config.old">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Web.Debug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
+    <None Include="Web.Release.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="pages\credits.aspx.designer.vb">
@@ -175,6 +188,20 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="pages\dizionari.aspx.designer.vb">
+      <DependentUpon>dizionari.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="pages\dizionari.aspx.vb">
+      <DependentUpon>dizionari.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="pages\presentazione.aspx.designer.vb">
+      <DependentUpon>presentazione.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="pages\presentazione.aspx.vb">
+      <DependentUpon>presentazione.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="pages\tecnica.aspx.designer.vb">
       <DependentUpon>tecnica.aspx</DependentUpon>
     </Compile>
@@ -204,6 +231,7 @@
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
     </None>
+    <None Include="My Project\PublishProfiles\Aruba FTP.pubxml" />
     <None Include="My Project\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <CustomToolNamespace>My</CustomToolNamespace>
@@ -211,11 +239,11 @@
     </None>
     <Content Include="packages.config" />
     <Content Include="templates\basic.master" />
-    <None Include="Web.Debug.config">
-      <DependentUpon>Web.config</DependentUpon>
+    <None Include="Web.config.Debug.old">
+      <DependentUpon>Web.config.old</DependentUpon>
     </None>
-    <None Include="Web.Release.config">
-      <DependentUpon>Web.config</DependentUpon>
+    <None Include="Web.config.Release.old">
+      <DependentUpon>Web.config.old</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup />
